--- a/ubuntu-18.04/Dockerfile
+++ b/ubuntu-18.04/Dockerfile
@@ -7,9 +7,6 @@ ARG U_NAME=admin
 ARG U_ID=1000
 ARG G_ID=1000
 
-RUN groupadd -g $G_ID -o $U_NAME
-RUN useradd -d /home/$U_NAME  -s /bin/bash -r -m -p 123456a! -u $U_ID -g $G_ID $U_NAME
-
 # sed -i "s%http://archive.ubuntu.com/ubuntu/%http://mirrors.aliyun.com/ubuntu/%" /etc/apt/sources.list
 #--no-install-recommends 
 #gcc-aarch64-linux-gnu
@@ -20,8 +17,9 @@ RUN bash -c ' \
     sed -i "s@http://.*security.ubuntu.com@http://repo.huaweicloud.com@g" /etc/apt/sources.list && \
     apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y  --no-install-recommends \
+    apt-get install -y \
     git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig doxygen python python3 wget libssl-dev bc cpio sqlite3 \
+    bison sed perl gperf gawk unzip zlib1g-dev xsltproc \
     u-boot-tools \
     uuid-dev liblzo2-dev gettext \
     libtool \
@@ -29,14 +27,16 @@ RUN bash -c ' \
     git tig \
     libssl-dev bc cpio \
     device-tree-compiler \
-    rsync neovim vim dos2unix && \
+    sudo rsync neovim vim dos2unix && \
+    apt install gcc-aarch64-linux-gnu -y && \
     wget --no-check-certificate https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb -O /tmp/ripgrep.deb && dpkg -i /tmp/ripgrep.deb && rm /tmp/ripgrep.deb && \
     wget --no-check-certificate https://github.com/sharkdp/fd/releases/download/v8.7.0/fd_8.7.0_amd64.deb -O /tmp/fd.deb && dpkg -i /tmp/fd.deb && rm /tmp/fd.deb && \
+    wget --no-check-certificate https://raw.githubusercontent.com/GerritCodeReview/git-repo/main/repo -O /usr/local/bin/repo && chmod 755 /usr/local/bin/repo && \
     apt-get autoremove --purge -y && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/* /var/log/* /var/tmp/* /tmp/* \
     '
-    
+
 # /etc/hosts is readonly
 #RUN bash -c ' \
 #    cat >> /etc/hosts << EOF \
@@ -49,6 +49,13 @@ RUN bash -c ' \
 #RUN "dpkg-reconfigure dash <<EOF
 #no
 #EOF"
+
+RUN bash -c ' \
+    groupadd -g $G_ID -o $U_NAME && \
+    useradd -d /home/$U_NAME  -s /bin/bash -r -m -p 342b937d -u $U_ID -g $G_ID -G sudo $U_NAME && \
+    echo $U_NAME:342b937d | chpasswd \
+    '
+    
 
 
 USER $U_NAME
