--- a/ubuntu-18.04/Dockerfile
+++ b/ubuntu-18.04/Dockerfile
@@ -17,7 +17,7 @@ RUN bash -c ' \
     sed -i "s@http://.*security.ubuntu.com@http://repo.huaweicloud.com@g" /etc/apt/sources.list && \
     apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y \
+    apt-get install -y --no-install-recommends \
     apt-utils \
     distro-info-data lsb-release \
     git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig doxygen python python3 wget libssl-dev bc cpio sqlite3 \
@@ -33,8 +33,9 @@ RUN bash -c ' \
     mtd-utils squashfs-tools libtool\
     python3-pip \
     lib32stdc++6 \
-    sudo rsync neovim vim dos2unix && \
-    apt install gcc-aarch64-linux-gnu -y && \
+    openjdk-8-jdk openjdk-11-jdk \
+    sudo rsync vim dos2unix && \
+    apt install --no-install-recommends gcc-aarch64-linux-gnu -y && \
     apt-get install -qy openssh-server && sed -i "s|session    required     pam_loginuid.so|session    optional     pam_loginuid.so|g" /etc/pam.d/sshd && mkdir -p /var/run/sshd && \
     wget -q --no-check-certificate https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb -O /tmp/ripgrep.deb && dpkg -i /tmp/ripgrep.deb && rm /tmp/ripgrep.deb && \
     wget -q --no-check-certificate https://github.com/sharkdp/fd/releases/download/v8.7.0/fd_8.7.0_amd64.deb -O /tmp/fd.deb && dpkg -i /tmp/fd.deb && rm /tmp/fd.deb && \
@@ -46,7 +47,11 @@ RUN bash -c ' \
     apt-get update && apt-get install -y cmake && \
     apt-get autoremove --purge -y && \
     apt-get clean -y && \
-    rm -rf /var/lib/apt/lists/* /var/log/* /var/tmp/* /tmp/* \
+    rm -rf /var/lib/apt/lists/* /var/log/* /var/tmp/* /tmp/* /etc/apt/sources.list.d/kitware.list  && \
+    update-alternatives --remove-all java && \
+    update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-8-openjdk-amd64/bin/java 1 && \
+    update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 2 && \
+    update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/bin/java \
     '
 
 # /etc/hosts is readonly
