enable tty, lz4 and other tool depends it
    stdin_open: true
    tty: true

also you can manual start using: docker run -it

Signed-off-by: Alex Meng <mengxp@inspur.com>

--- a/docker_compile_environment/docker-compose.sample.yaml
+++ b/docker_compile_environment/docker-compose.sample.yaml
@@ -5,6 +5,8 @@ services:
     container_name: %HOSTNAME%_%USER%
     user: %UID%:%GID%
     privileged: true
+    stdin_open: true
+    tty: true   
     volumes:
       - $PWD/rootfs/home/%USER%:/home/%USER%
       - $PWD/rootfs/etc/passwd:/etc/passwd
